# telos-evm-docker

./: .gitignore  README.md  pyproject.toml
src/tevmc/: cli.py  config.py  logging.py  utils.py
template/services/elasticsearch/: elasticsearch.yml.template  runtime.py
template/services/kibana/: kibana.yml.template  runtime.py
template/services/leap/: Dockerfile  config.ini.template  runtime.py
template/services/redis/: redis.conf.template  runtime.py
template/services/rpc/: config.json.template  runtime.py
template/services/translator/: Dockerfile  config.json.template  runtime.py
tests/: conftest.py  test_evm.py  test_mainnet.py
tests/bennyfi-evm-bridge/: conftest.py  test_bennyfi_evm_bridge.py  test_bennyfi_evm_bridge_zero_actions.py  test_bennyfi_evm_bridge_zero_validations.py  test_set_number.py
tests/bennyfi-evm-bridge/util/: bridge_test_util.py  evm_transaction_signer.py  function_encoder.py  token.py  util_zero.py  zero_bridge.py
tevmc/config/default/: local.py
